--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             
 <p class = "par"><h3>Join us on our revolution and be a part of the betrayal lore.</h3></p>
 <br><br><br>
-<button class = "cn"><a href = "form.html">JOIN US</a></button>
+<button class = "cn"><a href = "form.html">EXPLORE</a></button>
 
         </div>
         <br><br><br><br><br><br><br><br><br><br><br>
@@ -56,3 +56,4 @@
 
 
 </html>
+
