--- a/lore.html
+++ b/lore.html
@@ -10,26 +10,26 @@
     <div class = "icon">
         <img src = "an1.gif" class="img">
         <div class = "navbar">
-            <a href = "index.html">HOME</a>
+            <a href = "index.html" class = "top">HOME</a>
         </div>
     </div>
 <br><br><br><br>
  <b><div class = "main">Ready to take part in the exciting journey !!</div></b>
     <div class="content">
     <div class = "Articles">
-        <button type = "submit" class = "btn">Explore the logistics for every action</button>
+        <button type = "submit" class = "btn" id ="but"><a href ="form.html" class="con" >Explore the logistics for every action</a></button>
     </div><br><br>
     <div class = "Fan Arts">
-        <button type = "submit" class= "btn">Watch artistic touch</button>
+        <button type = "submit" class= "btn" id ="but"><a href ="form.html" class="con">Watch artistic touch</a></button>
     </div><br><br>
     <div class = "Characteriztion">
-        <button type = "submit" class = "btn">Critical understanding of characters</button>
+        <button type = "submit" class = "btn" id ="but"><a href ="form.html" class="con">Critical understanding of characters</a></button>
     </div><br><br>
     <div class = "Political view">
-        <button type = "submit" class = "btn">Economic disparity and political instability</button>
+        <button type = "submit" class = "btn" id ="but"><a href ="form.html" class="con">Economic disparity and political instability</a></button>
     </div><br><br>
     <div class = "Hokages views">
-        <button type = "submit" class ="btn">How each hokage viewed them</button>
+        <button type = "submit" class ="btn" id ="but"><a href ="form.html" class="con">How each hokage viewed them</a></button>
     </div>
     </div>
 </body>
